--- a/libsh/Makefile
+++ b/libsh/Makefile
@@ -3,16 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mrandou <mrandou@student.42.fr>            +#+  +:+       +#+         #
+#    By: dideryck <dideryck@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/08/23 13:11:33 by DERYCKE           #+#    #+#              #
-#    Updated: 2018/10/17 17:13:08 by mrandou          ###   ########.fr        #
+#    Updated: 2018/10/17 17:22:08 by dideryck         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libsh.a
 
-FILES = sh_strsplit sh_strfpos sh_create_elem sh_prompt sh_getvalue
+FILES = sh_strsplit sh_strfpos sh_create_elem sh_display_prompt sh_getvalue
 
 SRC = $(addsuffix .c, $(FILES))
 OBJ = $(addsuffix .o, $(FILES))
