--- a/libsh/Makefile
+++ b/libsh/Makefile
@@ -6,7 +6,7 @@
 #    By: DERYCKE <DERYCKE@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/08/23 13:11:33 by DERYCKE           #+#    #+#              #
-#    Updated: 2019/02/05 00:28:27 by DERYCKE          ###   ########.fr        #
+#    Updated: 2019/02/06 05:22:22 by DERYCKE          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = libsh.a
 
 FILES = sh_strsplit sh_strfpos sh_getvalue \
 		sh_get_env_value sh_add_field_array sh_find_env_key sh_append_env_value \
-		sh_get_env_key sh_exec_cmd sh_get_shell sh_free_shell sh_rtree_to_array \
+		sh_get_env_key sh_get_shell sh_free_shell sh_rtree_to_array \
 		sh_get_size_rtree \
 
 SRC = $(addsuffix .c, $(FILES))
