edit: makefile animation for all

--- a/libms/Makefile
+++ b/libms/Makefile
@@ -6,7 +6,7 @@
 #    By: mrandou <mrandou@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/08/23 13:11:33 by DERYCKE           #+#    #+#              #
-#    Updated: 2019/03/06 13:38:02 by mrandou          ###   ########.fr        #
+#    Updated: 2019/03/06 16:27:38 by mrandou          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,6 +29,12 @@ $(NAME): $(OBJ)
 
 %.o: %.c
 	@gcc -c -Wall -Werror -Wextra -I . -o $@ $< 
+	@printf "LIBMS -> \033[32m"
+	@printf $<
+	@printf "\033[0m\r\n"
+	@printf "\033[K\r"
+	@printf "\033[A"
+	@printf "\033[K\r"
 
 clean: 
 	@rm -f $(OBJ)
